import kotlin.math.PI

open class Ellipse(
    center: Point,
    val radius1: Double,
    val radius2: Double
) : Shape(listOf(center)) {
    init {
        require(radius1 > 0.0) { "radius1 must be positive" }
        require(radius2 > 0.0) { "radius2 must be positive" }
    }

    override val area: Double
        get() = radius1 * radius2 * PI

    override fun clone(): Ellipse = Ellipse(center.clone(), radius1, radius2)
    val center: Point
        get() = points[0]
}