@startuml
skinparam classAttributeIconSize 0

abstract class Shape {
    # pointList : List<Point>
    + points : List<Point> {readOnly}
    + move(delta : Point) : Unit
    {abstract} + area : Double
    {abstract} + clone() : Shape
}

class Point {
    + x : Double
    + y : Double
    + clone() : Point
    + move(deltaX : Double, deltaY : Double) : Point
}

class Line {
    - start : Point
    - end : Point
    + length : Double
    + slope : Double
    + area : Double
    + clone() : Line
}

class Rectangle {
    - corner1 : Point
    - corner2 : Point
    + width : Double
    + height : Double
    + area : Double
    + clone() : Rectangle
}

class Square {
    + clone() : Square
}

class Ellipse {
    + center : Point
    + radius1 : Double
    + radius2 : Double
    + area : Double
    + clone() : Ellipse
}

class Circle {
    + radius : Double
    + clone() : Circle
}

class Triangle {
    - corner1 : Point
    - corner2 : Point
    - corner3 : Point
    + area : Double
    + clone() : Triangle
}

Shape <|-- Line
Shape <|-- Rectangle
Shape <|-- Ellipse
Shape <|-- Triangle

Rectangle <|-- Square
Ellipse <|-- Circle

Shape *-- "1..*" Point : pointList

Line ..> Point : start,end
Rectangle ..> Point : corners
Triangle ..> Point : corners
Ellipse --> Point : center

@enduml
